--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+  <section class="home">
+
+  </section>  
+  <section class="play-ground">
+
+  </section>
+  <section class="score">
     
+  </section>
 </body>
 </html>
