--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-  <section class="home">
-
-  </section>  
-  <section class="play-ground">
-
-  </section>
-  <section class="score">
-    
-  </section>
+<body class="poppins-thin ">
+  <main  class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center" >
+    <section class="home min-h-screen text-white flex flex-col justify-center items-center">
+<div class="flex flex-col items-center gap-10">
+    <h1 class="text-8xl font-bold uppercase "> Alpha Clash Pro</h1>
+<p>Unleash Your Keyboard Kun g Fu :Press `Enter`to play</p>
+<button class="btn bg-white text-black">play</button>
+    </section>  
+</div>
+    <section class="play-ground">
+  
+    </section>
+    <section class="score">
+      
+    </section>
+  </main>
 </body>
 </html>
