--- a/index.html
+++ b/index.html
@@ -4,25 +4,96 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alpa Clash</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+    
+<link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
+
 <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="poppins-thin ">
   <main  class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center" >
-    <section class="home min-h-screen text-white flex flex-col justify-center items-center">
+    <!-- home section -->
+    <section id="home-screen" class="home min-h-screen text-white flex flex-col justify-center items-center ">
 <div class="flex flex-col items-center gap-10">
     <h1 class="text-8xl font-bold uppercase "> Alpha Clash Pro</h1>
 <p>Unleash Your Keyboard Kun g Fu :Press `Enter`to play</p>
-<button class="btn bg-white text-black">play</button>
-    </section>  
+<button onclick="play()" class="btn bg-white text-black">play</button>
 </div>
-    <section class="play-ground">
-  
+    </section>  
+<!-- playground -->
+    <section id="play-ground" class=" hidden">
+  <div class="flex flex-col items-center gap-20 pt-20">
+    <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#011313cc] bg-[#FFFFFFB3]">
+      <div class=" flex justify-center">
+<p class="bg-[#2F2941] px-6 pb-4 rounded-b-xl text-white">Don't watch keyboard while playing</p>
+    </div>
+    <div class="flex justify-center items-center h-full">
+      <p id="current-alphabet" class="text-black text-9xl font-bold">Y</p>
+    </div>
+  </div>
+    <div>
+        <div class="flex justify-center gap-1 my-1 w-full">
+            <kbd id="q" class="kbd">q</kbd>
+            <kbd id="w" class="kbd">w</kbd>
+            <kbd id="e" class="kbd">e</kbd>
+            <kbd id="r" class="kbd">r</kbd>
+            <kbd id="t" class="kbd">t</kbd>
+            <kbd id="y" class="kbd">y</kbd>
+            <kbd id="u" class="kbd">u</kbd>
+            <kbd id="i" class="kbd">i</kbd>
+            <kbd id="o" class="kbd">o</kbd>
+            <kbd id="p" class="kbd">p</kbd>
+          </div> 
+          <div class="flex justify-center gap-1 my-1 w-full">
+            <kbd id="a" class="kbd">a</kbd>
+            <kbd id="s" class="kbd">s</kbd>
+            <kbd id="d" class="kbd">d</kbd>
+            <kbd id="f" class="kbd">f</kbd>
+            <kbd id="g" class="kbd">g</kbd>
+            <kbd id="h" class="kbd">h</kbd>
+            <kbd id="j" class="kbd">j</kbd>
+            <kbd id="k" class="kbd">k</kbd>
+            <kbd id="l" class="kbd">l</kbd>
+          </div> 
+          <div class="flex justify-center gap-1 my-1 w-full">
+            <kbd id="z" class="kbd"> z </kbd>
+            <kbd id="x" class="kbd"> x </kbd>
+            <kbd id="c" class="kbd"> c </kbd>
+            <kbd id="v" class="kbd"> v </kbd>
+            <kbd id="b" class="kbd"> b </kbd>
+            <kbd id="n" class="kbd"> n </kbd>
+            <kbd id="m" class="kbd"> m </kbd>
+            <kbd id="/" class="kbd"> / </kbd>
+          </div>
+    </div>
+    <div class="flex justify-between w-3/4">
+      <button class="btn rounded-full bg-purple-500 text-white px-2">
+        Life
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
+        <span id="current-life">5</span>
+      </button>
+      <button class="btn rounded-full bg-purple-500 text-white px-2 ">
+        score
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
+        <span id="current-score">0</span>
+      </button>
+    </div>
+  </div>
     </section>
-    <section class="score">
-      
+    <section id="fina-score" class="score flex justify-center items-center min-h-screen hidden">
+      <div class="text-white text-center space-y-6 bg-[#FFFFFFB3] p-a">
+        <h1 class="text-3xl">Game over!</h1>
+        <h1 class="text-8xl">
+          <span class="font-extrabold">Score:</span>
+          <span id="last-score">14</span>
+        </h1>
+        <button onclick="play()" class="btn">Play Again</button>
+        <p>Pracite will make you  a pro</p>
+      </div>
     </section>
   </main>
+  <script src="scripts/ulitiy.js"></script>
+  <script src="scripts/index.js"></script>
+ 
 </body>
 </html>
